--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="grid-container">
     <div class="grid-item" style="position: relative; height:60vh; width:30vw">
     <canvas id="GSD"></canvas>
-    </div>q
+    </div>
     <div class="grid-item" style="position: relative; height:60vh; width:30vw">
     <canvas id="Values"></canvas>
     </div>
