--- a/index.html
+++ b/index.html
@@ -29,6 +29,27 @@
     }
     canvas {
     }
+    .example_e {
+border: none;
+background: #404040;
+color: #ffffff !important;
+font-weight: 100;
+padding: 20px;
+text-transform: uppercase;
+border-radius: 6px;
+display: inline-block;
+transition: all 0.3s ease 0s;
+}
+
+.example_e:hover {
+color: #404040 !important;
+font-weight: 700 !important;
+letter-spacing: 3px;
+background: none;
+-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+transition: all 0.3s ease 0s;
+}
   </style>
 </head>
 
@@ -193,7 +214,7 @@
               }
           },
           pointLabels: {
-            fontSize: 8
+            fontSize: 12
           }
         }
       }
@@ -204,6 +225,9 @@
     Chart.defaults.global.defaultFontFamily = 'Helvetica Neue';
     window.test = new Chart(ctx3, options);
   </script>
+<div></div>
+  <div class="button_cont" align="center"><a class="example_e" onclick="window.print();" rel="nofollow noopener">Click here to print!</a></div>
+<div></div>
 </body>
 
 </html>
