--- a/index.html
+++ b/index.html
@@ -7,49 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
   <script src="chartjs-plugin-dragdata.min.js"></script>
-  <style>
-
-    html,
-    body {
-      font-weight: 16;
-      font-family: HelveticaNeue;
-
-      margin: 0;
-      padding: 0;
-
-
-    }
-    .grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto;
-  margin: 0;
-  padding: 0;
-
-    }
-    canvas {
-    }
-    .example_e {
-border: none;
-background: #404040;
-color: #ffffff !important;
-font-weight: 100;
-padding: 20px;
-border-radius: 6px;
-display: inline-block;
-transition: all 0.3s ease 0s;
-}
-
-.example_e:hover {
-color: #404040 !important;
-font-weight: 700 !important;
-letter-spacing: 3px;
-background: none;
--webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
--moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-transition: all 0.3s ease 0s;
-}
-  </style>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
